  - host_runtime_info()
    - Bugfix: Elements not matching the whitelist were not counted as ignored.(Simon Meggle)
    - Raise a message after first host runtime issue. Changed state for that check to warning.(Simon Meggle)
  - dc_runtime_info.pm
    - Bugfix: Elements not matching the whitelist were not counted as ignored.(Simon Meggle)
    - New option --showall. Without this only the tool status of machines with problems is listed.
    -  Bugfix: "Installed,running,supported and newer than the version available on the host." was set
       to warning but this is quit ok.
     - In case of a complete runtime check the output is shorted. 
  - vm_net_info()
    - Bugfix: Fixed missing semicolon between some perf values and warning threshold.(Simon Meggle)

- 31 May 2015 M.Fuerstenau version 0.9.24
  - check_vmware_esx.pl:
    - Option --statelabels changed from a switch to handing over a value (y or n). This was done as mentioned 
      earlier to fulfill to have the label OK, CRITICAL etc. in plugin output to
      fulfill the rules of the plugin developer guidelines. This was proposed by Simon Meggle.
      See Readme.
    - Bugfix: Wrong output for --statelabels from the help.

- 3 Jun 2015 M.Fuerstenau version 0.9.25
  - check_vmware_esx.pl:and dc_runtime_info()
    - New optione --open-vm-tools to signalize that Open VM Tools are used and that the 
      version of the tools on the host is obsolete.
  - dc_runtime_info()
    - "VMware Tools is installed, but it is not managed by VMWare" will except the previous point
      now lead to a warning (1) instead of a critical (2).

- 10 Jun 2015 M.Fuerstenau version 0.9.26
  - help()
    - Bugfix: --nosession was printed out twice. Same line the not "not" was missing.
      This was bad because it changed the meaning of the line. Same error in the command reference
      because the reference is only the output from the help in a file.