@@ -201,23 +201,16 @@ Using a sessionfile
 ===================
 
 To reduce amounts of login/logout events in the vShpere logfiles or a lot of open sessions using sessionfiles the login part has been totally
-rewritten with version 0.9.8..
+rewritten with version 0.9.8.
 
 Using session files is now the default. Only one session file per host or vCenter is used as default. The sessionfile name is automatically set
-to the vSphere host or the vCenter (IP or name - whatever is used in the check).
+to the vSphere host or the vCenter (IP or name - whatever is used in the check). The file will only update if the session get invalidated at
+some point.
 
 Multiple sessions are possible using different session file names. To form different session file names the default name is enhenced by the value
 you set with --sessionfile.
 
-NOTICE! All checks using the same session are serialized. So a lot of checks using only one session can cause timeouts. In this case you should
-enhence the number of sessions by using --sessionfile in the command definition and define the value in the service definition command as an extra
-argument so it can be used in the command definition as $ARGn$.
-
 --sessionfile is now optional and only used to enhance the sessionfile name to have multiple sessions.
-
-If a session logs in it sets a lock file (sessionfilename_locked). The lock file is been set when the session starts and removed at the end of the
-plugin run. A newly started check looks for the lock file and waits until it is no longer there. So here we have a serialization now. It will not
-hang forever due to the alarm routine. Therefore the default for the timeout is enhenced to 40 secs. instead of 30 secs..
 
 Example command and service check definition:
 ---------------------------------------------
